RESOLVED FIXED312276
AX: Accessibility can infinitely recurse with circular SVG use-element references, causing a crash
https://bugs.webkit.org/show_bug.cgi?id=312276
Summary AX: Accessibility can infinitely recurse with circular SVG use-element refere...
Tyler Wilcock
Reported 2026-04-14 09:16:32 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-14 09:16:38 PDT
Tyler Wilcock
Comment 2 2026-04-14 09:21:21 PDT
EWS
Comment 3 2026-04-14 13:17:22 PDT
Committed 311222@main (9fec56013cb5): <https://commits.webkit.org/311222@main> Reviewed commits have been landed. Closing PR #62740 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.